--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -10,6 +10,7 @@ body {
     scroll-behavior: smooth;
     overflow-x: hidden;
     background-color: lightgoldenrodyellow;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .page-container {
@@ -22,17 +23,14 @@ main {
     flex: 1 0 auto;
 }
 
-/* Header Styles */
+/* Header and Navbar Styles */
 header {
-    background: linear-gradient(to top, #f9e79f, #f1c40f);
+    background: lightgoldenrodyellow; /* Same color as the rest of the website */
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 50px;
-}
-
-.app-name {
-    margin-left: 2.5%;
+    padding: 0 2.5%;
 }
 
 .app-name a {
@@ -41,15 +39,16 @@ header {
 }
 
 nav {
-    margin-right: 5%;
-    color: black;
-    text-decoration: none;
+    display: flex;
+    align-items: center;
+    font-family: 'Lora', serif;
 }
 
 nav a {
     color: black;
     text-decoration: none;
     font-weight: normal;
+    margin-left: 20px; /* Add some spacing between nav items */
 }
 
 /* Hero Section Styles */
@@ -462,17 +461,21 @@ input::-webkit-calendar-picker-indicator {
     justify-content: space-between;
     margin-top: 20px;
     width: 100%;
+    font-family: 'Lora', serif;
     }
 
 
-.back-button, .next-button {
-    width: 100px;
-    }
+.btn {
+    font-family: 'Lora', serif;
+}
 
 
-.back-button button, .next-button button {
-    width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    text-align: center;
-    }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Lora:wght@400;700&display=swap');
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Lora', serif;
+}
+
+body, p, span, div, input, button {
+    font-family: 'Montserrat', sans-serif;
+}
