--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon-32x32.png') }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon-16x16.png') }}">
     <link rel="apple-touch-icon" sizes="192x192" href="{{ url_for('static', filename='images/favicon-192x192.png') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='CSS/style.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 </head>
 
@@ -30,9 +38,9 @@
                 <h1>Welcome to PLACEHOLDER ☀️</h1>
                 <p>Discover your perfect sunny getaway!</p>
                 <div class="homepage-img">
-                    <img src="{{ url_for('static', filename='images/paris_cafe.png') }}" alt="Paris Cafe" class="img-fluid">
+                    <dotlottie-player src="https://lottie.host/18c6e39c-6450-476f-8bc3-edd70586c62a/A3C68311jC.json" background="transparent" speed="0.5" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
                 </div>
-                <button id="start-search" class="btn btn-primary">Start Search</button>
+                <button id="start-search" class="btn btn-dark btn-lg">Start Search</button>
             </div>
 
             <div class="typeform-container">
@@ -50,7 +58,7 @@
                                     <button type="button" class="btn btn-secondary back-btn">Back</button>
                                 </div>
                                 <div class="next-button">
-                                    <button type="button" class="btn btn-primary next-btn">Next</button>
+                                    <button type="button" class="btn btn-dark next-btn">Next</button>
                                 </div>
                             </div>
                         </div>
@@ -65,7 +73,7 @@
                                     <button type="button" class="btn btn-secondary back-btn">Back</button>
                                 </div>
                                 <div class="next-button">
-                                    <button type="button" class="btn btn-primary next-btn">Next</button>
+                                    <button type="button" class="btn btn-dark next-btn">Next</button>
                                 </div>
                             </div>
                         </div>
@@ -85,7 +93,7 @@
                                     <button type="button" class="btn btn-secondary back-btn">Back</button>
                                 </div>
                                 <div class="next-button">
-                                    <button type="button" class="btn btn-primary next-btn">Next</button>
+                                    <button type="button" class="btn btn-dark next-btn">Next</button>
                                 </div>
                             </div>
                         </div>
@@ -103,7 +111,7 @@
                                     <button type="button" class="btn btn-secondary back-btn">Back</button>
                                 </div>
                                 <div class="next-button">
-                                    <button type="button" class="btn btn-primary next-btn">Next</button>
+                                    <button type="button" class="btn btn-dark next-btn">Next</button>
                                 </div>
                             </div>
                         </div>
@@ -151,7 +159,7 @@
                                     <button type="button" class="btn btn-secondary back-btn">Back</button>
                                 </div>
                                 <div class="next-button">
-                                    <button type="submit" class="btn btn-warning rounded-pill px-3" id="explore-button"><b>Explore</b></button>
+                                    <button type="submit" class="btn btn-dark rounded-pill px-3" id="explore-button"><b>Explore</b></button>
                                 </div>
                             </div>
                         </div>
