--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -428,16 +428,16 @@ input::-webkit-calendar-picker-indicator {
     max-width: 600px;
     margin: 0 auto 20px;
     background-color: #e0e0e0;
-    padding: 3px;
-    border-radius: 3px;
+    padding: 0px;
+    border-radius: 8px;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, .2);
 }
 
 .progress {
     display: block;
     height: 22px;
-    background-color: #39ff14;
-    border-radius: 3px;
+    background-color: gold;
+    border-radius: 8px;
     transition: width 500ms ease-in-out;
 }
 
