--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
                 <button id="start-search" class="btn btn-dark btn-lg">Start Search</button>
             </div>
 
+
             <div class="typeform-container">
                 <div class="typeform-like-container">
                     <div class="progress-bar">
@@ -51,23 +52,26 @@
                     <form id="search-form" action="{{ url_for('result') }}" method="GET">
                         <div class="question active" id="location-question" data-question="1">
                             <h2>Where are you located?</h2>
-                            <input type="text" id="current-location" name="current_location" class="form-control" placeholder="Your current location" required autocomplete="off" list="cities-list">
+                            <input type="text" id="current-location" name="current_location" class="form-select text-bg-light" placeholder="Your current location" required autocomplete="off" list="cities-list">
                             <datalist id="cities-list"></datalist>
+                            <div id="error-message" style="color: red; display: none;">Please select a location to continue.</div>
                             <div class="button-group">
                                 <div class="back-button">
                                     <button type="button" class="btn btn-secondary back-btn">Back</button>
                                 </div>
                                 <div class="next-button">
-                                    <button type="button" class="btn btn-dark next-btn">Next</button>
+                                    <button type="button" class="btn btn-dark next-btn" id="next-btn">Next</button>
                                 </div>
                             </div>
                         </div>
 
                         <div class="question" id="date-question" data-question="2">
                             <h2>When do you want to travel?</h2>
+                            <p>Note: weather forecasting is most accurate for up to 16 days in advance.</p>
                             <div class="date-range">
                                 <input type="text" id="date-range" name="date_range" required>
                             </div>
+                            <div id="date-error-message" style="color: red; display: none;">Please select a date range to continue.</div>
                             <div class="button-group">
                                 <div class="back-button">
                                     <button type="button" class="btn btn-secondary back-btn">Back</button>
@@ -82,7 +86,7 @@
                             <h2>How far are you willing to travel?</h2>
                             <div class="preference-option">
                                 <label for="distance">Distance (km): <span id="distance-value">Any distance</span></label>
-                                <input type="range" id="distance" name="distance" min="0" max="5000" step="100" value="5000">
+                                <input type="range" id="distance" name="distance" min="0" max="5000" step="100" value="0">
                             </div>
                             <div class="button-group">
                                 <div class="back-button">
