Improve style of list and map view in results.html

--- a/templates/results.html
+++ b/templates/results.html
@@ -64,7 +64,7 @@
             <div id="map" class="map-view"></div>
         </div>
         <div class="new-search-container">
-            <a href="{{ url_for('home', _anchor='search-form') }}" class="btn btn-primary new-search-btn"><b>New Search</b></a>
+            <a href="{{ url_for('home', _anchor='search-form') }}" class="btn btn-dark btn-lg new-search-btn">New Search</a>
         </div>
     </main>
 
