fix 'back' button

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,7 @@
                             <div id="error-message" style="color: red; display: none;">Please select a location to continue.</div>
                             <div class="button-group">
                                 <div class="back-button">
-                                    <button type="button" class="btn btn-secondary back-btn">Back</button>
+                                    <button type="button" class="btn btn-secondary back-btn" onclick="window.location.href='{{ url_for('home') }}'">Back</button>
                                 </div>
                                 <div class="next-button">
                                     <button type="button" class="btn btn-dark next-btn" id="next-btn">Next</button>
