--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,6 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon-32x32.png') }}">
-    <link rel="icon" type="image/png<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon-32x32.png') }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon-16x16.png') }}">
     <link rel="apple-touch-icon" sizes="192x192" href="{{ url_for('static', filename='images/favicon-192x192.png') }}">
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
@@ -99,12 +92,39 @@
                         </div>
 
                         <div class="question" id="population-question" data-question="4">
-                            <h2>Big or small city?</h2>
+                            <h2>What size of city do you prefer?</h2>
                             <div class="preference-option">
-                                <label for="population-min">Population range:</label>
-                                <input type="number" id="population-min" name="population_min" placeholder="Min" min="0" value="0">
-                                <span>-</span>
-                                <input type="number" id="population-max" name="population_max" placeholder="Max" min="0">
+                                <p>Select one or more options:</p>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="all" id="all-population" name="population_range" checked>
+                                    <label class="form-check-label" for="all-population">
+                                        Select All
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="small" id="small-urban" name="population_range">
+                                    <label class="form-check-label" for="small-urban">
+                                        Small Urban Areas (0 - 200,000)
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="medium" id="medium-urban" name="population_range">
+                                    <label class="form-check-label" for="medium-urban">
+                                        Medium-size Urban Areas (200,001 - 500,000)
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="metropolitan" id="metropolitan" name="population_range">
+                                    <label class="form-check-label" for="metropolitan">
+                                        Metropolitan Areas (500,001 - 1,500,000)
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" value="large-metropolitan" id="large-metropolitan" name="population_range">
+                                    <label class="form-check-label" for="large-metropolitan">
+                                        Large Metropolitan Areas (1,500,001 and higher)
+                                    </label>
+                                </div>
                             </div>
                             <div class="button-group">
                                 <div class="back-button">
