--- a/templates/index.html
+++ b/templates/index.html
@@ -217,6 +217,12 @@
                                         <td><input type="radio" name="schengen" value="dont" id="schengen-dont"></td>
                                         <td><input type="radio" name="schengen" value="either" id="schengen-either" checked></td>
                                     </tr>
+                                    <tr>
+                                        <td>Eurozone</td>
+                                        <td><input type="radio" name="eurozone" value="must" id="eurozone-must"></td>
+                                        <td><input type="radio" name="eurozone" value="dont" id="eurozone-dont"></td>
+                                        <td><input type="radio" name="eurozone" value="either" id="eurozone-either" checked></td>
+                                    </tr>
                                 </tbody>
                             </table>
                             <div class="button-group">
