--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -390,11 +390,25 @@ input::-webkit-calendar-picker-indicator {
     padding: 10px;
     cursor: pointer;
     transition: all 0.3s ease;
+    position: relative;
 }
 
-.destination-card.expanded {
-    background-color: #f8f8f8;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+.expand-indicator {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 18px;
+    color: black;
+    cursor: pointer;
+    z-index: 10; /* Ensure it's above other elements */
+}
+
+.destination-details {
+    display: none;
+}
+
+.destination-card.expanded .destination-details {
+    display: block;
 }
 
 .destination-details {
