--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -869,6 +869,40 @@ input[type="range"]::-ms-thumb {
 }
 
 
+/* Loading page style */
+
+#loading-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 9999;
+}
+
+.loading-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 100%;
+  max-width: 300px;
+}
+
+.loading-content h2 {
+  color: white;
+  margin-bottom: 20px;
+  font-family: Arial, sans-serif;
+}
+
+.loading-content dotlottie-player {
+  width: 100%;
+  height: 300px;
+}
+
 
 
 
