Substitute placeholder with name

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Sunnyscout</title>
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon-32x32.png') }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon-16x16.png') }}">
     <link rel="apple-touch-icon" sizes="192x192" href="{{ url_for('static', filename='images/favicon-192x192.png') }}">
@@ -19,7 +19,7 @@
     <div class="page-container">
         <header>
             <div class="app-name">
-                <h3><a href="{{ url_for('home') }}">PLACEHOLDER ☀️</a></h3>
+                <h3><a href="{{ url_for('home') }}">Sunnyscout ☀️</a></h3>
             </div>
             <nav>
               <a href="{{ url_for('about') }}">About</a>
@@ -28,7 +28,7 @@
 
         <main>
             <div class="home-page active text-center">
-                <h1>Welcome to PLACEHOLDER ☀️</h1>
+                <h1>Welcome to Sunnyscout</h1>
                 <p>Discover your perfect sunny getaway!</p>
                 <div class="homepage-img">
                 <dotlottie-player src="https://lottie.host/fd403fc8-0546-4faf-9d81-5ba1db7a67aa/EljZLbq02o.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
@@ -248,7 +248,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2024 PLACEHOLDER</p>
+            <p>&copy; 2024 Sunnyscout</p>
         </footer>
     </div>
 
