--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="app-name">
-            </h3><a href="{{ url_for('home') }}">PLACEHOLDER ☀️</a></h3>
+            </h3><a href="{{ url_for('home') }}">Sunnyscout</a></h3>
         </div>
         <nav>
           <a href="#">About</a>
@@ -30,7 +30,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 PLACEHOLDER</p>
+        <p>&copy; 2024 Sunnyscout</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
