--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <div class="page-container">
         <header>
             <div class="app-name">
-                <h3><a href="{{ url_for('home') }}">Sunnyscout ☀️</a></h3>
+                <h3><a href="{{ url_for('home') }}">Sunnyscout</a></h3>
             </div>
             <nav>
               <a href="{{ url_for('about') }}">About</a>
